<resources>
    <string name="app_name">Memogram</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_on_board">Abadikan setiap momen yang berharga dan terbaikmu di sini</string>
    <string name="login">Masuk</string>
    <string name="signup">Daftar</string>
    <string name="email">E-mail</string>
    <string name="password">Kata sandi</string>
    <string name="accept">Lanjutkan</string>
    <string name="name">Nama</string>
    <string name="feed">Beranda</string>
    <string name="post">Unggah</string>
    <string name="profile">Profil</string>
    <string name="logout">Keluar</string>
    <string name="try_again">Coba lagi</string>
    <string name="take_moment">Abadikan momen-momen terbaikmu!</string>
    <string name="retry">Maaf, terjadi kesalahan.</string>
    <string name="desc">Deskripsi</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="new_post">Postingan Baru</string>
    <string name="minimal_password">Kata sandi minimal 6 karakter</string>
    <string name="invalid_email">E-mail tidak valid</string>
    <string name="empty_name">Nama harus diisi</string>
    <string name="empty_email">E-mail harus diisi</string>
    <string name="empty_password">Kata sandi harus diisi</string>
    <string name="email_already_in_use">E-mail sudah digunakan</string>
    <string name="email_or_password">E-mail atau kata sandi salah</string>
    <string name="error">Terjadi kesalahan</string>
    <string name="turn_on_location">Aktifkan GPS untuk unggah cerita beserta lokasi</string>
    <string name="location">Lokasi: %1$s, %2$s</string>
    <string name="landscape">Upload Foto Dalam Bentuk Landscape</string>
    <string name="morning">Hi! Selamat Pagi</string>
    <string name="afternoon">Hi! Selamat Siang</string>
    <string name="evening">Hi! Selamat Sore</string>
    <string name="night">Hi! Selamat Malam</string>
</resources>