<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.auth.OnBoardingFragment">

    <ImageView
        android:id="@+id/iv_on_board"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/ic_moment"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_on_board_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/desc_on_board"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_on_board"
        app:layout_constraintStart_toStartOf="@+id/iv_on_board"
        app:layout_constraintTop_toBottomOf="@+id/iv_on_board" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:background="@drawable/bg_button_login"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tv_on_board_desc"
        app:layout_constraintStart_toStartOf="@+id/tv_on_board_desc"
        app:layout_constraintTop_toBottomOf="@+id/tv_on_board_desc" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:background="@drawable/bg_button_signup"
        android:text="@string/signup"
        android:textColor="@color/primary_green"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>